Release REST API v0.3.0
