# models/order_create_response.go
@@ -33,7 +33,7 @@ type OrderCreateResponse struct {
 
 	// status
 	// Required: true
-	Status *OrderResponse `json:"status"`
+	Status *string `json:"status"`
 }
 
 // Validate validates this order create response
@@ -109,15 +109,6 @@ func (m *OrderCreateResponse) validateStatus(formats strfmt.Registry) error {
 
 	if err := validate.Required("status", "body", m.Status); err != nil {
 		return err
-	}
-
-	if m.Status != nil {
-		if err := m.Status.Validate(formats); err != nil {
-			if ve, ok := err.(*errors.Validation); ok {
-				return ve.ValidateName("status")
-			}
-			return err
-		}
 	}
 
 	return nil
