# restapi/operations/order/delete_order_id_responses.go
@@ -1,0 +1,190 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package order
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	models "github.com/spplatform/kazan-backend/models"
+)
+
+// DeleteOrderIDAcceptedCode is the HTTP code returned for type DeleteOrderIDAccepted
+const DeleteOrderIDAcceptedCode int = 202
+
+/*DeleteOrderIDAccepted Canceled
+
+swagger:response deleteOrderIdAccepted
+*/
+type DeleteOrderIDAccepted struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.StatusResponse `json:"body,omitempty"`
+}
+
+// NewDeleteOrderIDAccepted creates DeleteOrderIDAccepted with default headers values
+func NewDeleteOrderIDAccepted() *DeleteOrderIDAccepted {
+
+	return &DeleteOrderIDAccepted{}
+}
+
+// WithPayload adds the payload to the delete order Id accepted response
+func (o *DeleteOrderIDAccepted) WithPayload(payload *models.StatusResponse) *DeleteOrderIDAccepted {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the delete order Id accepted response
+func (o *DeleteOrderIDAccepted) SetPayload(payload *models.StatusResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *DeleteOrderIDAccepted) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(202)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// DeleteOrderIDBadRequestCode is the HTTP code returned for type DeleteOrderIDBadRequest
+const DeleteOrderIDBadRequestCode int = 400
+
+/*DeleteOrderIDBadRequest Bad request
+
+swagger:response deleteOrderIdBadRequest
+*/
+type DeleteOrderIDBadRequest struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.StatusResponse `json:"body,omitempty"`
+}
+
+// NewDeleteOrderIDBadRequest creates DeleteOrderIDBadRequest with default headers values
+func NewDeleteOrderIDBadRequest() *DeleteOrderIDBadRequest {
+
+	return &DeleteOrderIDBadRequest{}
+}
+
+// WithPayload adds the payload to the delete order Id bad request response
+func (o *DeleteOrderIDBadRequest) WithPayload(payload *models.StatusResponse) *DeleteOrderIDBadRequest {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the delete order Id bad request response
+func (o *DeleteOrderIDBadRequest) SetPayload(payload *models.StatusResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *DeleteOrderIDBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(400)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// DeleteOrderIDNotFoundCode is the HTTP code returned for type DeleteOrderIDNotFound
+const DeleteOrderIDNotFoundCode int = 404
+
+/*DeleteOrderIDNotFound Not found
+
+swagger:response deleteOrderIdNotFound
+*/
+type DeleteOrderIDNotFound struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.StatusResponse `json:"body,omitempty"`
+}
+
+// NewDeleteOrderIDNotFound creates DeleteOrderIDNotFound with default headers values
+func NewDeleteOrderIDNotFound() *DeleteOrderIDNotFound {
+
+	return &DeleteOrderIDNotFound{}
+}
+
+// WithPayload adds the payload to the delete order Id not found response
+func (o *DeleteOrderIDNotFound) WithPayload(payload *models.StatusResponse) *DeleteOrderIDNotFound {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the delete order Id not found response
+func (o *DeleteOrderIDNotFound) SetPayload(payload *models.StatusResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *DeleteOrderIDNotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(404)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// DeleteOrderIDInternalServerErrorCode is the HTTP code returned for type DeleteOrderIDInternalServerError
+const DeleteOrderIDInternalServerErrorCode int = 500
+
+/*DeleteOrderIDInternalServerError Internal server error
+
+swagger:response deleteOrderIdInternalServerError
+*/
+type DeleteOrderIDInternalServerError struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.StatusResponse `json:"body,omitempty"`
+}
+
+// NewDeleteOrderIDInternalServerError creates DeleteOrderIDInternalServerError with default headers values
+func NewDeleteOrderIDInternalServerError() *DeleteOrderIDInternalServerError {
+
+	return &DeleteOrderIDInternalServerError{}
+}
+
+// WithPayload adds the payload to the delete order Id internal server error response
+func (o *DeleteOrderIDInternalServerError) WithPayload(payload *models.StatusResponse) *DeleteOrderIDInternalServerError {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the delete order Id internal server error response
+func (o *DeleteOrderIDInternalServerError) SetPayload(payload *models.StatusResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *DeleteOrderIDInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(500)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
